# pytest-ignore-directory-example

./: README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  tox.ini
src/: converter.py
tests/: test_converter.py
tests/in_progress/: test_in_progress_modules.py
tests/upcoming_modules/: test_upcoming_modules.py
