# setup.cfg

[metadata]
name = distance_calculator
version = attr: my_project.__version__
description = My distance calculator application
author = ericsalesdeandrade
author_email = sdaeric19@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    pytest
    tox
    poetry

dev =
    pytest
    tox

# Including pytest.ini config in setup.cfg
[tool:pytest]
testpaths =
    tests
addopts = -v 
filterwarnings = ignore

# Specifying the directory to ignore
norecursedirs =  tests/in_progress tests/upcoming_modules

# Specify a custom directory for pytest cache
cache_dir = .pytest_cache